adjusted layout and theme according to the project

--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   }
 }
 
-.App-header {
+/*.App-header {
   background-color: #282c34;
   min-height: 100vh;
   display: flex;
@@ -27,7 +27,7 @@
 
 .App-link {
   color: #61dafb;
-}
+}*/
 
 @keyframes App-logo-spin {
   from {
